force-app/main/default/objects/ICS_External_Legal_Entity__c/ICS_External_Legal_Entity__c.object-meta.xml
<CustomObject>
    <label>List of Similars</label>
    <nameField>
        <displayFormat>EXLE-{00000000}</displayFormat>
        <label>ICS External Legal Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List of Similars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>