force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/Agency_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Product_Id__c</fullName>
    <label>Agency Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>