force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/Established_Year__c.field-meta.xml
<CustomField>
    <fullName>Established_Year__c</fullName>
    <label>Established Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>