force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/ICS_Application_Request__c.field-meta.xml
<CustomField>
    <fullName>ICS_Application_Request__c</fullName>
    <label>ICS Application Request</label>
    <referenceTo>ICS_Application__c</referenceTo>
    <relationshipName>ICS_External_Legal_Entities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>