force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/Industry_code_type__c.field-meta.xml
<CustomField>
    <fullName>Industry_code_type__c</fullName>
    <label>Industry Code Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>