force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/Industry_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Value__c</fullName>
    <label>Industry Code Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>