force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/Local_Legal_Form_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Legal_Form_Code__c</fullName>
    <label>Local Legal Form Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>