force-app/main/default/objects/ICS_External_Legal_Entity__c/fields/State_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Code__c</fullName>
    <label>State Province Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>